fix: fix layout issues

--- a/pictorial/sites/all/themes/basicnew/css/layout.css
+++ b/pictorial/sites/all/themes/basicnew/css/layout.css
@@ -168,8 +168,8 @@ li.leaf , li.collapsed , li.expanded {
 }
 
 #left-sidebar-content{
-	height:600px;
-	overfow-x:hidden;
+	height:355px;
+	overflow-x:hidden;
 	overflow-y:auto;
 	width:230px;
 }
